--- a/package.json
+++ b/package.json
@@ -20,12 +20,26 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.1.1",
+    "classie": "^1.0.0",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "gltfpack": "^0.16.0",
+    "isotope-layout": "^3.0.6",
+    "jquery.counterup": "^2.1.0",
+    "jquery.easing": "^1.4.1",
+    "jquery.stellar": "^0.6.2",
+    "ngx-owl-carousel-o": "^6.0.0",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
+    "smooth-scroll": "^16.1.3",
+    "smoothscroll": "^0.4.0",
     "swiper": "^5.4.5",
     "three": "^0.131.0",
-    "gltfpack": "^0.16.0"
+    "waypoints": "^4.0.1",
+    "wowjs": "^1.1.3",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
