--- a/angular.json
+++ b/angular.json
@@ -84,7 +84,9 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/robots.txt",
+              "stc/sitemap.xml"
             ]
           }
         },
