--- a/angular.json
+++ b/angular.json
@@ -86,7 +86,7 @@
               "src/favicon.ico",
               "src/assets",
               "src/robots.txt",
-              "stc/sitemap.xml"
+              "src/sitemap.xml"
             ]
           }
         },
